--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Dec 01 10:37:20 CET 2023
-sdk.dir=C\:\\Users\\SergioPalomoGarcia\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\tabat\\AppData\\Local\\Android\\Sdk
