--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 01 10:37:20 CET 2023
-sdk.dir=C\:\\Users\\tabat\\AppData\\Local\\Android\\Sdk
+#Sun Dec 03 16:16:06 CET 2023
+sdk.dir=C\:\\Users\\laura\\AppData\\Local\\Android\\Sdk
